fix: fix keyboard visibility on app load

--- a/movie-search/src/css/keyboard.css
+++ b/movie-search/src/css/keyboard.css
@@ -5,9 +5,10 @@
 
 .keyboard {
   position: absolute;
-  min-width: 720px;
-  max-width: 720px;
+  display: none;
+  width: 720px;
   z-index: 10;
+  bottom: -175px;
   animation: disable 0.5s linear;
 }
 
@@ -18,11 +19,11 @@
 
 @keyframes disable {
   0% { bottom: 65px; }
-  100% { bottom: -100px; }
+  100% { bottom: -175px; }
 }
 
 @keyframes enable {
-  0% { bottom: -100px; }
+  0% { bottom: -175px; }
   100% { bottom: 65px; }
 }
 
